--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -582,7 +582,7 @@ navigate during the search, it follows consecutive filtering rules defined by th
 In cargo-semver-checks, each lint consists of the following fields:
 \begin{itemize}
 	\item \texttt{id} -- a short, unique name identifying the lint, most often matching the
-		file name,
+		filename that contains the lint,
 	\item \texttt{human\_readable\_name} -- a longer, more informative name,
 	\item \texttt{description} -- general information about what is the detected problem,
 	\item \texttt{required\_update} -- the minimum version bump needed to avoid breaking semver,
