--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -586,7 +586,7 @@ In cargo-semver-checks, each lint consists of the following fields:
 	\item \texttt{human\_readable\_name} -- a longer, more informative name,
 	\item \texttt{description} -- general information about what is the detected problem,
 	\item \texttt{required\_update} -- the minimum version bump needed to avoid breaking semver,
-	\item \texttt{reference\_link} -- a link to the official Rust documentation coresponding to
+	\item \texttt{reference\_link} -- a link to the official Rust documentation corresponding to
 		the issue (if available),
 	\item \texttt{query} -- the filtering rules responsible for comparing two versions and
 		detecting semver violations (more detail in section \ref{r:section_new_lints}),
