--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -598,7 +598,7 @@ In cargo-semver-checks, each lint consists of the following fields:
 Despite being the project's core component, new lints are not the only thing we developed. In total
 there are four repositories that we have been actively contributing to for the last few months:
 \begin{itemize}
-	\item \textbf{cargo-semver-checks} -- a CLI tool that runs lints (Trustfall queries),
+	\item \textbf{cargo-semver-checks} -- a CLI tool that runs the lints (Trustfall queries),
 	\item \textbf{trustfall-rustdoc-adapter} -- implements the Trustfall interface for one specific
 		rustdoc version,
 	\item \textbf{trustfall-rustdoc} -- allows to run Trustfall queries over rustdoc regardless of
