--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -588,7 +588,7 @@ In cargo-semver-checks, each lint consists of the following fields:
 	\item \texttt{required\_update} -- the minimum version bump needed to avoid breaking semver,
 	\item \texttt{reference\_link} -- a link to the official Rust documentation corresponding to
 		the issue (if available),
-	\item \texttt{query} -- the filtering rules responsible for comparing two versions and
+	\item \texttt{query} -- the Trustfall filtering rules responsible for comparing two versions and
 		detecting semver violations (more detail in section \ref{r:section_new_lints}),
 	\item \texttt{arguments} -- optional, user-defined constants for the query,
 	\item \texttt{error\_message} -- the exact problem and some of its possible causes,
