--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -590,7 +590,7 @@ In cargo-semver-checks, each lint consists of the following fields:
 		the issue (if available),
 	\item \texttt{query} -- the Trustfall filtering rules responsible for comparing two versions and
 		detecting semver violations (more detail in section \ref{r:section_new_lints}),
-	\item \texttt{arguments} -- optional, user-defined constants for the query,
+	\item \texttt{arguments} -- optional, user-defined Trustfall constants for the query,
 	\item \texttt{error\_message} -- the exact problem and some of its possible causes,
 	\item \texttt{per\_result\_error\_template} -- the exact location of the code that broke semver.
 \end{itemize} \bigskip
