--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -154,8 +154,8 @@ publish their own work to be used by others. Each registry contains an index, wh
 a searchable list of all the crates available within its registry. Cargo uses the selected registry
 and index to download crates and update dependencies.
 
-One can think of cargo as the Rust analogue of Python's pip (the official package manager for
-Python, responsible for handling all \texttt{import} statements). But despite their similar roles,
+One can think of cargo as the Rust analogue of Python's pip (the recommended package manager for
+Python). But despite their similar roles,
 cargo has many advantages making it a lot safer than pip:
 \begin{itemize}
 	\item Cargo's crates are always installed using virtual environments, thus they cannot be
