--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -1077,7 +1077,13 @@ https://github.com/obi1kenobi/cargo-semver-checks-action/issues/8
     \textit{Github RustCrypto issue \#22} \\
     https://github.com/RustCrypto/utils/issues/22
 
+\bibitem{python-pip} Wikipedia,
+	\textit{Python pip} \\
+	https://en.wikipedia.org/wiki/Pip\_(package\_manager)
+
 \end{thebibliography}
+
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %             Attachments             %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
